# QuackFIX

./: CMakeLists.txt  Makefile  PHASES.md  README.md  USERGUIDE.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: EMBEDDED_DICTIONARY.md
scripts/: generate_embedded_dictionary.py
src/: quackfix_extension.cpp
src/dictionary/: fix_dictionary.hpp  xml_loader.cpp  xml_loader.hpp
src/include/: quackfix_extension.hpp
src/include/dictionary/: embedded_fix44_dictionary.hpp
src/parser/: fix_file_reader.cpp  fix_file_reader.hpp  fix_group_parser.cpp  fix_group_parser.hpp  fix_hot_tags.hpp  fix_message.hpp  fix_tokenizer.cpp  fix_tokenizer.hpp  fix_type_conversions.cpp  fix_type_conversions.hpp
src/table_function/: dictionary_functions.cpp  dictionary_functions.hpp  read_fix_function.cpp  read_fix_function.hpp
test/: test_dictionary.cpp  test_tokenizer.cpp
test/sql/: quackfix.test  read_fix.test
testdata/: README.md  groups.fix  sample.fix
